Move everything that is not Minecraft into a Java 8 core
The catalog, feeds, link allowlist, strings, menu model and the game's side of the Chromium helper now compile once to Java 8 bytecode with no Minecraft classes, so every Minecraft version from 1.12.2 up can share them. The 26.2 screens only draw the model and forward input.